--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,16 +2,24 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="Generate chords for any key, major or minor">
+        <meta name="author" content="Maestrojosiah">
         <title>{% block title %}Welcome!{% endblock %}</title>
 		<!-- bootstrap -->
-		<link rel="stylesheet" type="text/css" href="{{asset('css/bootstrap.css')}}" />
-
+		{#<link rel="stylesheet" type="text/css" href="{{asset('css/bootstrap.css')}}" />#}
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         {% block stylesheets %}{% endblock %}
     </head>
-    <body>
+    <body class="text-center">
         {% block body %}{% endblock %}
-		<script src="{{asset('js/jquery-3.3.1.min.js')}}"></script>
-		<script src="{{asset('js/bootstrap.min.js')}}"></script>
+		{#<script src="{{ absolute_url ( asset('js/jquery-3.3.1.min.js') )}}"></script>#}
+		<script
+			  src="https://code.jquery.com/jquery-3.4.1.min.js"
+			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+			  crossorigin="anonymous"></script>
+		{#<script src="{{absolute_url ( asset('js/bootstrap.min.js') )}} )"></script>#}
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 		{% block javascripts %}{% endblock %}
     </body>
 </html>
